Update svn info on parent pom
git-svn-id: https://svn.apache.org/repos/asf/karaf/trunk@958958 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,6 @@
         <groupId>org.apache.felix</groupId>
         <artifactId>felix-parent</artifactId>
         <version>1.2.1</version>
-        <relativePath>../pom/pom.xml</relativePath>
     </parent>
 
     <groupId>org.apache.karaf</groupId>
@@ -53,9 +52,9 @@
     </modules>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/felix/trunk/karaf</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/felix/trunk/karaf</developerConnection>
-        <url>http://svn.apache.org/viewvc/felix/trunk/karaf/</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/karaf/trunk</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/karaf/trunk</developerConnection>
+        <url>http://svn.apache.org/viewvc/karaf/trunk/</url>
     </scm>
 
     <issueManagement>
