Remove remaining references to 'Felix Karaf'
git-svn-id: https://svn.apache.org/repos/asf/karaf/trunk@959081 13f79535-47bb-0310-9956-ffa450edef68

--- a/demos/web/src/main/webapp/WEB-INF/web.xml
+++ b/demos/web/src/main/webapp/WEB-INF/web.xml
@@ -26,7 +26,7 @@
   <display-name>Karaf Embedded Example</display-name>
 
   <listener>
-    <listener-class>org.apache.felix.karaf.web.WebAppListener</listener-class>
+    <listener-class>org.apache.karaf.web.WebAppListener</listener-class>
   </listener>
 
   <welcome-file-list>
