--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,7 @@
         <pax.web.version>0.7.2</pax.web.version>
         <servlet.api.version>2.5</servlet.api.version>
         <spring.osgi.version>1.2.0</spring.osgi.version>
+        <spring2.version>2.5.6.SEC01</spring2.version>
         <spring.version>3.0.3.RELEASE</spring.version>
         <sshd.version>0.4.0</sshd.version>
         <xbean.version>3.7</xbean.version>
