KARAF-31: Use OBR as a possible way to resolve transitive dependencies of features
git-svn-id: https://svn.apache.org/repos/asf/karaf/trunk@959937 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -225,6 +225,11 @@
                 <version>${project.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.apache.karaf.features</groupId>
+                <artifactId>org.apache.karaf.features.obr</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.apache.karaf.admin</groupId>
                 <artifactId>org.apache.karaf.admin.core</artifactId>
                 <version>${project.version}</version>
