--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -88,6 +88,10 @@
             <artifactId>org.apache.karaf.features.management</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.karaf.features</groupId>
+            <artifactId>org.apache.karaf.features.obr</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.karaf.admin</groupId>
             <artifactId>org.apache.karaf.admin.core</artifactId>
         </dependency>
