--- a/features/pom.xml
+++ b/features/pom.xml
@@ -36,6 +36,7 @@
         <module>core</module>
         <module>command</module>
         <module>management</module>
+        <module>obr</module>
     </modules>
 
 </project>
