KARAF-100: the list of OBR repositories is not persisted
git-svn-id: https://svn.apache.org/repos/asf/karaf/trunk@959962 13f79535-47bb-0310-9956-ffa450edef68

--- a/assembly/src/main/filtered-resources/etc/config.properties
+++ b/assembly/src/main/filtered-resources/etc/config.properties
@@ -74,6 +74,11 @@ felix.fileinstall.noInitialDelay = true
 eclipse.stateSaveDelayInterval = 1000
 
 #
+# OBR Repository list
+#
+obr.repository.url = 
+
+#
 # Java platform package export properties.
 #
 
