--- a/features/pom.xml
+++ b/features/pom.xml
@@ -36,7 +36,7 @@
         <module>core</module>
         <module>command</module>
         <module>management</module>
-        <!-- <module>obr</module> -->
+        <module>obr</module>
     </modules>
 
 </project>
