[KARAF-59] Introduce a ${karaf.data} system property to be able to easily move the data directory to a different location.
git-svn-id: https://svn.apache.org/repos/asf/karaf/trunk@960853 13f79535-47bb-0310-9956-ffa450edef68

--- a/assembly/src/main/distribution/text/etc/org.apache.felix.fileinstall-deploy.cfg
+++ b/assembly/src/main/distribution/text/etc/org.apache.felix.fileinstall-deploy.cfg
@@ -18,5 +18,5 @@
 ################################################################################
 
 felix.fileinstall.dir     = ${karaf.base}/deploy
-felix.fileinstall.tmpdir  = ${karaf.base}/data/generated-bundles
+felix.fileinstall.tmpdir  = ${karaf.data}/generated-bundles
 felix.fileinstall.poll    = 1000
