--- a/assembly/src/main/filtered-resources/etc/config.properties
+++ b/assembly/src/main/filtered-resources/etc/config.properties
@@ -57,7 +57,7 @@ karaf.auto.start=startup.properties
 org.osgi.framework.startlevel.beginning=100
 karaf.startlevel.bundle=60
 
-karaf.shutdown.port.file=${karaf.base}/data/port
+karaf.shutdown.port.file=${karaf.data}/port
 
 #
 # FileMonitor properties
