--- a/assembly/src/main/filtered-resources/etc/config.properties
+++ b/assembly/src/main/filtered-resources/etc/config.properties
@@ -43,12 +43,12 @@ org.osgi.framework.system.packages=org.osgi.framework; version=1.5.0, \
  org.osgi.service.packageadmin; version=1.2.0, \
  org.osgi.service.startlevel; version=1.1.0, \
  org.osgi.service.url; version=1.0.0, \
- org.osgi.util.tracker; version=1.4.0 \
+ org.osgi.util.tracker; version=1.4.0, \
+ org.apache.karaf.jaas.boot; version=${karaf.osgi.version}, \
+ org.apache.karaf.version; version=${karaf.osgi.version} \
  ${jre-${java.specification.version}}
 
-org.osgi.framework.system.packages.extra=\
- org.apache.karaf.jaas.boot; version=${karaf.osgi.version}, \
- org.apache.karaf.version; version=${karaf.osgi.version}
+org.osgi.framework.system.packages.extra=
 
 # javax.transaction is needed to avoid class loader constraint violation when using javax.sql  
 org.osgi.framework.bootdelegation=sun.*,com.sun.*,javax.transaction,javax.transaction.*
