[KARAF-117]refactor tooling/testing/Helper to accomodate recent changes in config.properties
git-svn-id: https://svn.apache.org/repos/asf/karaf/trunk@963003 13f79535-47bb-0310-9956-ffa450edef68

--- a/tooling/testing/pom.xml
+++ b/tooling/testing/pom.xml
@@ -99,6 +99,8 @@
                                     <includes>
                                         <include>config.properties</include>
                                         <include>startup.properties</include>
+                                        <include>jre.properties</include>
+                                        <include>custom.properties</include>
                                     </includes>
                                 </resource>
                             </resources>
@@ -134,6 +136,8 @@
                         <Include-Resource>
                             {maven-resources},
                             org/apache/karaf/testing/config.properties=target/classes/config.properties,
+                            org/apache/karaf/testing/jre.properties=target/classes/jre.properties,
+                            org/apache/karaf/testing/custom.properties=target/classes/custom.properties,
                             org/apache/karaf/testing/startup.properties=target/classes/startup.properties
                         </Include-Resource>
                         <_versionpolicy>${bnd.version.policy}</_versionpolicy>
