--- a/webconsole/branding/pom.xml
+++ b/webconsole/branding/pom.xml
@@ -47,6 +47,11 @@
           <artifactId>org.apache.felix.webconsole</artifactId>
           <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
