KARAF-122: Webconsole login doesn't work with karaf.framework set to equinox
git-svn-id: https://svn.apache.org/repos/asf/karaf/trunk@964766 13f79535-47bb-0310-9956-ffa450edef68

--- a/assembly/src/main/filtered-resources/etc/config.properties
+++ b/assembly/src/main/filtered-resources/etc/config.properties
@@ -79,6 +79,11 @@ felix.fileinstall.noInitialDelay = true
 eclipse.stateSaveDelayInterval = 1000
 
 #
+# equinox boot classloader configuration
+#
+osgi.parentClassloader = fwk
+
+#
 # OBR Repository list
 # This property will be modified by the obr:addUrl and obr:removeUrl commands. 
 #
