--- a/manual/pom.xml
+++ b/manual/pom.xml
@@ -60,12 +60,12 @@
                                 <get src="https://cwiki.apache.org/confluence/display/KARAF/Karaf+Users'+Guide+in+one+page" dest="${manual}.temp" />
                                 <for list="1,2,3,4,5,6,7,8,9,10" param="letter">
                                     <sequential>
-                                        <replaceregexp file="${manual}.temp" flags="g" match="&quot;/confluence/display/KARAF/([^&quot;]*)\+([^&quot;+]*)&quot;" replace="&quot;/confluence/display/KARAF/\1\2&quot;" />
+                                        <replaceregexp file="${manual}.temp" byline="true" flags="g" match="&quot;/confluence/display/KARAF/([^&quot;]*)\+([^&quot;+]*)&quot;" replace="&quot;/confluence/display/KARAF/\1\2&quot;" />
                                     </sequential>
                                 </for>
-                                <replaceregexp file="${manual}.temp" flags="g" match="&quot;/confluence/display/KARAF/([^&quot;]*)&quot;" replace="&quot;#KarafUsers%27Guideinonepage-\1&quot;" />
-                                <replaceregexp file="${manual}.temp" flags="g" match="&quot;/confluence/([^&quot;]*)&quot;" replace="&quot;http://cwiki.apache.org/confluence/\1&quot;" />
-                                <replaceregexp file="${manual}.temp" flags="g" match="&gt;top&lt;/a&gt;" replace="&gt;&lt;/a&gt;" />
+                                <replaceregexp file="${manual}.temp" byline="true" flags="g" match="&quot;/confluence/display/KARAF/([^&quot;]*)&quot;" replace="&quot;#KarafUsers%27Guideinonepage-\1&quot;" />
+                                <replaceregexp file="${manual}.temp" byline="true" flags="g" match="&quot;/confluence/([^&quot;]*)&quot;" replace="&quot;http://cwiki.apache.org/confluence/\1&quot;" />
+                                <replaceregexp file="${manual}.temp" byline="true" flags="g" match="&gt;top&lt;/a&gt;" replace="&gt;&lt;/a&gt;" />
                                 <java classname="org.ccil.cowan.tagsoup.CommandLine" classpathref="maven.plugin.classpath" fork="true" output="${manual}.temp2" logError="true">
                                     <arg value="${manual}.temp" />
                                 </java>
