--- a/deployer/blueprint/pom.xml
+++ b/deployer/blueprint/pom.xml
@@ -23,13 +23,13 @@
     <parent>
         <groupId>org.apache.karaf.deployer</groupId>
         <artifactId>deployer</artifactId>
-        <version>1.99.0-SNAPSHOT</version>
+        <version>2.0.0</version>
     </parent>
 
     <groupId>org.apache.karaf.deployer</groupId>
     <artifactId>org.apache.karaf.deployer.blueprint</artifactId>
     <packaging>bundle</packaging>
-    <version>1.99.0-SNAPSHOT</version>
+    <version>2.0.0</version>
     <name>Apache Karaf :: Blueprint Deployer</name>
 
     <description>This deployer transforms a plain blueprint xml file to a deployable bundle</description>
