--- a/itests/pom.xml
+++ b/itests/pom.xml
@@ -23,13 +23,13 @@
     <parent>
         <groupId>org.apache.karaf</groupId>
         <artifactId>karaf</artifactId>
-        <version>1.99.0-SNAPSHOT</version>
+        <version>2.0.0</version>
     </parent>
 
     <groupId>org.apache.karaf</groupId>
     <artifactId>itests</artifactId>
     <packaging>jar</packaging>
-    <version>1.99.0-SNAPSHOT</version>
+    <version>2.0.0</version>
     <name>Apache Karaf :: ITests</name>
 
     <description>
