--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <groupId>org.apache.karaf</groupId>
     <artifactId>karaf</artifactId>
     <packaging>pom</packaging>
-    <version>1.99.0-SNAPSHOT</version>
+    <version>2.0.0</version>
     <name>Apache Karaf</name>
     <inceptionYear>2007</inceptionYear>
 
@@ -52,9 +52,9 @@
     </modules>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/karaf/trunk</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/karaf/trunk</developerConnection>
-        <url>http://svn.apache.org/viewvc/karaf/trunk/</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/karaf/tags/karaf-2.0.0</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/karaf/tags/karaf-2.0.0</developerConnection>
+        <url>http://svn.apache.org/viewvc/karaf/tags/karaf-2.0.0</url>
     </scm>
 
     <issueManagement>
