--- a/shell/console/pom.xml
+++ b/shell/console/pom.xml
@@ -23,13 +23,13 @@
     <parent>
         <groupId>org.apache.karaf.shell</groupId>
         <artifactId>shell</artifactId>
-        <version>1.99.0-SNAPSHOT</version>
+        <version>2.0.0</version>
     </parent>
 
     <groupId>org.apache.karaf.shell</groupId>
     <artifactId>org.apache.karaf.shell.console</artifactId>
     <packaging>bundle</packaging>
-    <version>1.99.0-SNAPSHOT</version>
+    <version>2.0.0</version>
     <name>Apache Karaf :: Shell Console</name>
 
     <description>
