--- a/tooling/cmdhelp-maven-plugin/pom.xml
+++ b/tooling/cmdhelp-maven-plugin/pom.xml
@@ -21,13 +21,13 @@
     <parent>
       <groupId>org.apache.karaf.tooling</groupId>
       <artifactId>tooling</artifactId>
-      <version>1.99.0-SNAPSHOT</version>
+      <version>2.0.0</version>
     </parent>
 
     <groupId>org.apache.karaf.tooling</groupId>
     <artifactId>cmdhelp-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.99.0-SNAPSHOT</version>
+    <version>2.0.0</version>
     <name>Apache Karaf :: Maven2 Command Help plugin</name>
 
     <description>
