--- a/webconsole/pom.xml
+++ b/webconsole/pom.xml
@@ -24,13 +24,13 @@
   <parent>
     <groupId>org.apache.karaf</groupId>
     <artifactId>karaf</artifactId>
-    <version>1.99.0-SNAPSHOT</version>
+    <version>2.0.0</version>
   </parent>
 
   <groupId>org.apache.karaf.webconsole</groupId>
   <artifactId>webconsole</artifactId>
   <packaging>pom</packaging>
-  <version>1.99.0-SNAPSHOT</version>
+  <version>2.0.0</version>
   <name>Apache Karaf :: Web Console</name>
   
   <modules>
