[maven-release-plugin] prepare for next development iteration
git-svn-id: https://svn.apache.org/repos/asf/karaf/trunk@965512 13f79535-47bb-0310-9956-ffa450edef68

--- a/shell/osgi/pom.xml
+++ b/shell/osgi/pom.xml
@@ -23,13 +23,13 @@
     <parent>
         <groupId>org.apache.karaf.shell</groupId>
         <artifactId>shell</artifactId>
-        <version>2.0.0</version>
+        <version>2.0.1-SNAPSHOT</version>
     </parent>
 
     <groupId>org.apache.karaf.shell</groupId>
     <artifactId>org.apache.karaf.shell.osgi</artifactId>
     <packaging>bundle</packaging>
-    <version>2.0.0</version>
+    <version>2.0.1-SNAPSHOT</version>
     <name>Apache Karaf :: Shell OSGi Commands</name>
 
     <description>
