--- a/deployer/war/pom.xml
+++ b/deployer/war/pom.xml
@@ -23,13 +23,13 @@
     <parent>
         <groupId>org.apache.karaf.deployer</groupId>
         <artifactId>deployer</artifactId>
-        <version>2.0.0</version>
+        <version>2.0.1-SNAPSHOT</version>
     </parent>
 
     <groupId>org.apache.karaf.deployer</groupId>
     <artifactId>org.apache.karaf.deployer.war</artifactId>
     <packaging>bundle</packaging>
-    <version>2.0.0</version>
+    <version>2.0.1-SNAPSHOT</version>
     <name>Apache Karaf :: WAR Deployer</name>
 
     <description>This deployer transforms a plain war file to a deployable bundle</description>
