--- a/features/management/pom.xml
+++ b/features/management/pom.xml
@@ -23,13 +23,13 @@
     <parent>
         <groupId>org.apache.karaf.features</groupId>
         <artifactId>features</artifactId>
-        <version>2.0.0</version>
+        <version>2.0.1-SNAPSHOT</version>
     </parent>
 
     <groupId>org.apache.karaf.features</groupId>
     <artifactId>org.apache.karaf.features.management</artifactId>
     <packaging>bundle</packaging>
-    <version>2.0.0</version>
+    <version>2.0.1-SNAPSHOT</version>
     <name>Apache Karaf :: Features Management</name>
 
     <properties>
