--- a/jaas/boot/pom.xml
+++ b/jaas/boot/pom.xml
@@ -23,13 +23,13 @@
     <parent>
         <groupId>org.apache.karaf.jaas</groupId>
         <artifactId>jaas</artifactId>
-        <version>2.0.0</version>
+        <version>2.0.1-SNAPSHOT</version>
     </parent>
 
     <groupId>org.apache.karaf.jaas</groupId>
     <artifactId>org.apache.karaf.jaas.boot</artifactId>
     <packaging>bundle</packaging>
-    <version>2.0.0</version>
+    <version>2.0.1-SNAPSHOT</version>
     <name>Apache Karaf :: JAAS Boot</name>
 
     <description>
