--- a/webconsole/branding/pom.xml
+++ b/webconsole/branding/pom.xml
@@ -23,13 +23,13 @@
     <parent>
         <groupId>org.apache.karaf.webconsole</groupId>
         <artifactId>webconsole</artifactId>
-        <version>2.0.0</version>
+        <version>2.0.1-SNAPSHOT</version>
     </parent>
 
     <groupId>org.apache.karaf.webconsole</groupId>
     <artifactId>org.apache.karaf.webconsole.branding</artifactId>
     <packaging>bundle</packaging>
-    <version>2.0.0</version>
+    <version>2.0.1-SNAPSHOT</version>
     <name>Apache Karaf :: Web Console :: Branding</name>
 
     <description>Apache Karaf branding for the Apache Felix Web Console. This fragment
