--- a/assembly/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/assembly/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -25,4 +25,4 @@ featuresRepositories=mvn:org.apache.karaf/apache-karaf/${project.version}/xml/fe
 #
 # Comma separated list of features to install at startup
 #
-featuresBoot=ssh,management
+featuresBoot=config,ssh,management
