[KARAF-162]need exactly specify the import jline package version for webconsole.gogo
git-svn-id: https://svn.apache.org/repos/asf/karaf/trunk@988829 13f79535-47bb-0310-9956-ffa450edef68

--- a/webconsole/gogo/pom.xml
+++ b/webconsole/gogo/pom.xml
@@ -89,7 +89,10 @@
         <configuration>
           <instructions>
             <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-            <Import-Package>!${project.artifactId}*,*</Import-Package>
+            <Import-Package>!${project.artifactId}*,
+                            jline;version="[${jline.version}, ${jline.version}]",
+                            *
+            </Import-Package>
             <Export-Package>${project.artifactId}*;version=${project.version}</Export-Package>
             <Embed-Dependency>
                <!-- Required for JSON data transfer -->
