KARAF-26: Add a restart (with optional clean) command
git-svn-id: https://svn.apache.org/repos/asf/karaf/trunk@991865 13f79535-47bb-0310-9956-ffa450edef68

--- a/main/pom.xml
+++ b/main/pom.xml
@@ -75,6 +75,10 @@
                         </Private-Package>
                         <Import-Package>!*</Import-Package>
                         -->
+                        <Private-Package>
+                            org.apache.karaf.main*,
+                            org.osgi.*
+                        </Private-Package>
                     </instructions>
                     <unpackBundle>true</unpackBundle>
                 </configuration>
