Added archetypes module inside karaf pom
git-svn-id: https://svn.apache.org/repos/asf/karaf/trunk@992301 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
         <module>demos</module>
         <module>itests</module>
         <module>tooling</module>
+        <module>archetypes</module>
     </modules>
 
     <scm>
