[KARAF-146] osgi:list should only print out 'system' bundles above a certain level, by default, this should be 50, but it should be configurable /n Thanks Adrian Trenaman for the original patch :)
git-svn-id: https://svn.apache.org/repos/asf/karaf/trunk@995115 13f79535-47bb-0310-9956-ffa450edef68

--- a/assembly/src/main/filtered-resources/etc/custom.properties
+++ b/assembly/src/main/filtered-resources/etc/custom.properties
@@ -21,3 +21,5 @@
 # You can place any customized configuration here.
 # All the values specified here will override the default value.
 #
+
+karaf.systemBundlesStartLevel=50
