--- a/assembly/src/main/filtered-resources/etc/config.properties
+++ b/assembly/src/main/filtered-resources/etc/config.properties
@@ -45,7 +45,7 @@ org.osgi.framework.system.packages=org.osgi.framework; version=1.5.0, \
  org.osgi.service.url; version=1.0.0, \
  org.osgi.util.tracker; version=1.4.0, \
  org.apache.karaf.jaas.boot; version=${karaf.osgi.version}, \
- org.apache.karaf.version; version=${karaf.osgi.version} \
+ org.apache.karaf.version; version=${karaf.osgi.version}, \
  ${jre-${java.specification.version}}
 
 org.osgi.framework.system.packages.extra=
