--- a/assembly/src/main/filtered-resources/etc/jre.properties
+++ b/assembly/src/main/filtered-resources/etc/jre.properties
@@ -23,7 +23,7 @@
 
 # Standard package set.  Note that:
 #   - javax.transaction* is exported with a mandatory attribute
-jre-1.5=, \
+jre-1.5= \
  javax.accessibility, \
  javax.activity, \
  javax.crypto, \
@@ -149,9 +149,12 @@ jre-1.5=, \
 
 # Standard package set.  Note that:
 #   - javax.transaction* is exported with a mandatory attribute
-jre-1.6=, \
+jre-1.6= \
  javax.accessibility, \
+ javax.activation, \
  javax.activity, \
+ javax.annotation, \
+ javax.annotation.processing, \
  javax.crypto, \
  javax.crypto.interfaces, \
  javax.crypto.spec, \
@@ -162,6 +165,8 @@ jre-1.6=, \
  javax.imageio.plugins.jpeg, \
  javax.imageio.spi, \
  javax.imageio.stream, \
+ javax.jws, \
+ javax.jws.soap, \
  javax.lang.model, \
  javax.lang.model.element, \
  javax.lang.model.type, \
@@ -189,6 +194,7 @@ jre-1.6=, \
  javax.rmi, \
  javax.rmi.CORBA, \
  javax.rmi.ssl, \
+ javax.script, \
  javax.security.auth, \
  javax.security.auth.callback, \
  javax.security.auth.kerberos, \
@@ -225,6 +231,12 @@ jre-1.6=, \
  javax.tools, \
  javax.transaction; javax.transaction.xa; partial=true; mandatory:=partial, \
  javax.xml, \
+ javax.xml.bind, \
+ javax.xml.bind.annotation, \
+ javax.xml.bind.annotation.adapters, \
+ javax.xml.bind.attachment, \
+ javax.xml.bind.helpers, \
+ javax.xml.bind.util, \
  javax.xml.crypto, \
  javax.xml.crypto.dom, \
  javax.xml.crypto.dsig, \
@@ -234,12 +246,23 @@ jre-1.6=, \
  javax.xml.datatype, \
  javax.xml.namespace, \
  javax.xml.parsers, \
+ javax.xml.soap, \
+ javax.xml.stream, \
+ javax.xml.stream.events, \
+ javax.xml.stream.util, \
  javax.xml.transform, \
  javax.xml.transform.dom, \
  javax.xml.transform.sax, \
  javax.xml.transform.stax, \
  javax.xml.transform.stream, \
  javax.xml.validation, \
+ javax.xml.ws, \
+ javax.xml.ws.handler, \
+ javax.xml.ws.handler.soap, \
+ javax.xml.ws.http, \
+ javax.xml.ws.soap, \
+ javax.xml.ws.spi, \
+ javax.xml.ws.wsaddressing, \
  javax.xml.xpath, \
  org.ietf.jgss, \
  org.omg.CORBA, \
