--- a/assembly/src/main/filtered-resources/etc/startup.properties
+++ b/assembly/src/main/filtered-resources/etc/startup.properties
@@ -42,6 +42,9 @@ org/apache/karaf/shell/org.apache.karaf.shell.packages/${project.version}/org.ap
 org/apache/karaf/shell/org.apache.karaf.shell.commands/${project.version}/org.apache.karaf.shell.commands-${project.version}.jar=30
 org/apache/karaf/shell/org.apache.karaf.shell.dev/${project.version}/org.apache.karaf.shell.dev-${project.version}.jar=30
 org/apache/karaf/jaas/org.apache.karaf.jaas.config/${project.version}/org.apache.karaf.jaas.config-${project.version}.jar=30
+org/apache/servicemix/bundles/org.apache.servicemix.bundles.commons-codec/${commons-codec.bundle.version}/org.apache.servicemix.bundles.commons-codec-${commons-codec.bundle.version}.jar=30
+org/apache/servicemix/bundles/org.apache.servicemix.bundles.commons-lang/${commons-lang.bundle.version}/org.apache.servicemix.bundles.commons-lang-${commons-lang.bundle.version}.jar=30
+org/apache/servicemix/bundles/org.apache.servicemix.bundles.jasypt/${jasypt.bundle.version}/org.apache.servicemix.bundles.jasypt-${jasypt.bundle.version}.jar=30
 org/apache/karaf/jaas/org.apache.karaf.jaas.modules/${project.version}/org.apache.karaf.jaas.modules-${project.version}.jar=30
 org/apache/karaf/features/org.apache.karaf.features.core/${project.version}/org.apache.karaf.features.core-${project.version}.jar=30
 org/apache/karaf/features/org.apache.karaf.features.command/${project.version}/org.apache.karaf.features.command-${project.version}.jar=30
